Password obfuscation using the new event handlers. Better welcome message. Launch browser on Desktop.