@@ -4,6 +4,9 @@
 
 package com.darwinodb.app.jetty;
 
+import java.awt.Desktop;
+import java.net.URI;
+
 import com.darwino.commons.Platform;
 
 import picocli.CommandLine;
@@ -15,12 +18,19 @@ public class JettyMain extends AbstractJettyMain {
 	
 	@Override
 	public void welcomeMessage() {
+		Platform.log("");
 		Platform.log("-------------------------------------------------");
 		Platform.log("DarwinoDB, Desktop Edition");
-		Platform.log("This edition uses SQLite as the database engine.");
-		Platform.log("It is not licensed to be used in production");
+		Platform.log("{0}", getJettyServer().getMainURI());
 		Platform.log("-------------------------------------------------");
+		Platform.log("");
 	}
+	
+	@Override
+	public void postServerStart() {
+		openBrowser();
+	}
+
 	
 	@Override
 	public String defaultDarwinoDir() {
@@ -31,7 +41,17 @@ public class JettyMain extends AbstractJettyMain {
 	public static void main(String[] args) throws Throwable {
 		JettyMain main = new JettyMain();
 		CommandLine.run(main, System.err, args);
-		
-//		Desktop.getDesktop().browse(new URL("http://localhost:8080").toURI());
+	}
+	
+	public void openBrowser() {
+		Desktop desktop = java.awt.Desktop.getDesktop();
+		try {
+			//specify the protocol along with the URL
+			URI oURL = new URI(getJettyServer().getMainURI());
+			desktop.browse(oURL);
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
 	}
 }
